Component.html mynavbar, product and addproduct

--- a/frontend-angular-app/src/app/components/signin/signin.component.html
+++ b/frontend-angular-app/src/app/components/signin/signin.component.html
@@ -21,7 +21,7 @@
                                      <input type="password" class="form-control" formControlName="password">
                                    </div>
                              </div>
-                         </div>
+                         </div><br />
                          <div class="row">
                              <div class="col-md-12">
                                  <button type="button" class="btn btn-primary" (click)="signin()">Sign in</button>&nbsp;
