--- a/frontend-angular-app/src/app/components/products/products.component.html
+++ b/frontend-angular-app/src/app/components/products/products.component.html
@@ -1,1 +1,41 @@
-<p>products works!</p>
+<div class="container-fluid" style="margin-top:30px">
+    <div class="row">
+        <div class="col-sm-12">
+            <app-mynavbar></app-mynavbar>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-md-12">
+            <h2>Products</h2>
+            <div class="table-responsive-md">
+                <table class="table table-striped table-inverse">
+                    <thead class="thead-inverse">
+                        <tr>
+                            <th>ID.</th>
+                            <th>Who</th>
+                            <th>Type</th>
+                            <th>Name</th>
+                            <th>Detail</th>
+                            <th>Quantity</th>
+                            <th>Price</th>
+                            <th>Image</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td scope="row">id</td>
+                            <td>who</td>
+                            <td>type</td>
+                            <td>name</td>
+                            <td>detail</td>
+                            <td>quantity</td>
+                            <td>price</td>
+                            <td>img</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
+</div>
