--- a/frontend-angular-app/src/app/components/products/products.component.html
+++ b/frontend-angular-app/src/app/components/products/products.component.html
@@ -1,10 +1,6 @@
-<div class="container-fluid" style="margin-top:30px">
-    <div class="row">
-        <div class="col-sm-12">
-            <app-mynavbar></app-mynavbar>
-        </div>
-    </div>
+<app-mynavbar></app-mynavbar>
 
+<div class="container-fluid" style="margin-top:30px">           
     <div class="row">
         <div class="col-md-12">
             <h2>Products</h2>
@@ -24,14 +20,14 @@
                     </thead>
                     <tbody>
                         <tr>
-                            <td scope="row">id</td>
-                            <td>who</td>
-                            <td>type</td>
-                            <td>name</td>
-                            <td>detail</td>
-                            <td>quantity</td>
-                            <td>price</td>
-                            <td>img</td>
+                            <td scope="row">item.id</td>
+                            <td>item.who</td>
+                            <td>item.type</td>
+                            <td>item.name</td>
+                            <td>item.detail</td>
+                            <td>item.quantity</td>
+                            <td>item.price</td>
+                            <td>item.img</td>
                         </tr>
                     </tbody>
                 </table>
