--- a/frontend-angular-app/src/app/components/addproducts/addproducts.component.html
+++ b/frontend-angular-app/src/app/components/addproducts/addproducts.component.html
@@ -1,3 +1,5 @@
+<app-mynavbar></app-mynavbar>
+
 <div class="card">
     <div class="card-body">
         <h4 class="card-title">Add Product</h4>
@@ -81,7 +83,7 @@
                                 </div>
                                 <div class="col-md-9">
                                     <div class="form-group">
-                                      
+                                        <input type="file" class="form-control-file" formControlName='file'>
                                     </div>
                                 </div>
                             </div>
@@ -91,7 +93,7 @@
                                     
                                 </div>
                                 <div class="col-md-9">
-                                    
+                                    <img class="img-thumbnail" [src]="this.productForm.value.img" style="height:150px;">
                                 </div>
                             </div>
 
