--- a/frontend-angular-app/src/app/components/cart/cart.component.html
+++ b/frontend-angular-app/src/app/components/cart/cart.component.html
@@ -1,1 +1,34 @@
-<p>cart works!</p>
+<app-mynavbar></app-mynavbar>
+
+<h2>4rd: Cart</h2>
+<div class="table-responsive-md">
+    <table class="table table-striped table-inverse">
+        <thead class="thead-inverse">
+            <tr>
+                <th>ID.</th>
+                <th>who</th>
+                <th>Type</th>
+                <th>Name</th>
+                <th>Detail</th>
+                <th>Price</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr *ngFor="let item of cart; index as i">
+                <td scope="row">item.type</td>
+                <td>item.id</td>
+                <td>item.who</td>
+                <th>item.type</th>
+                <td>item.name</td>
+                <td>item.detail</td>
+                <td>item.price</td>
+            </tr>
+        </tbody>
+    </table>
+</div>
+
+<div class="row">
+    <div class="col-md-12 text-right">
+        <h4>Total : getSumPeice</h4>
+    </div>
+</div>
