--- a/frontend-angular-app/src/app/components/showproducts/showproducts.component.html
+++ b/frontend-angular-app/src/app/components/showproducts/showproducts.component.html
@@ -1,1 +1,35 @@
-<p>showproducts works!</p>
+<app-mynavbar></app-mynavbar>
+
+<div class="container-fluid" style="margin-top:30px">           
+    <div class="row">
+        <div class="col-md-12">
+            <h2>Products</h2>
+            <div class="table-responsive-md">
+                <table class="table table-striped table-inverse">
+                    <thead class="thead-inverse">
+                        <tr>
+                            <th>ID.</th>
+                            <th>Type</th>
+                            <th>Name</th>
+                            <th>Detail</th>
+                            <th>Quantity</th>
+                            <th>Price</th>
+                            <th>Image</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td scope="row">item.id</td>
+                            <td>item.type</td>
+                            <td>item.name</td>
+                            <td>item.detail</td>
+                            <td>item.quantity</td>
+                            <td>item.price</td>
+                            <td>item.img</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
+</div>
