profile status address payment

--- a/frontend-angular-app/src/app/components/mynavbar/mynavbar.component.html
+++ b/frontend-angular-app/src/app/components/mynavbar/mynavbar.component.html
@@ -13,6 +13,19 @@
             <li class="nav-item">
                 <a routerLink="/showproducts" routerLinkActive="active" class="btn btn-dark">Show Product</a>
             </li>
+            <li class="nav-item">
+                <a routerLink="/address" routerLinkActive="active" class="btn btn-dark">Address</a>
+            </li>
+            <li class="nav-item">
+                <a routerLink="/payments" routerLinkActive="active" class="btn btn-dark">Payment</a>
+            </li>
+            <li class="nav-item">
+                <a routerLink="/statusproducts" routerLinkActive="active" class="btn btn-dark">Status</a>
+            </li>
+            <li class="nav-item">
+                <a routerLink="/profile" routerLinkActive="active" class="btn btn-dark">Profile</a>
+            </li>
+            
         </ul>
         <a routerLink="/cart" class="btn btn-dark">
             <i class="fa fa-shopping-cart" aria-hidden="true"></i> Cart
