--- a/frontend-angular-app/src/app/components/address/address.component.html
+++ b/frontend-angular-app/src/app/components/address/address.component.html
@@ -1,1 +1,53 @@
-<p>address works!</p>
+<app-mynavbar></app-mynavbar>
+
+<div class="card">
+    <div class="card-body">
+        <h4 class="card-title">Add Address</h4>
+        <div class="row">
+            <div class="col-md-2">
+
+            </div>
+            <div class="col-md-8">
+                <form [formGroup]="addressForm">
+                    <div class="card">
+                        <div class="card-header">
+                            Address Form
+                        </div>
+                        <div class="card-body">
+                            <div class="row">
+                                <div class="col-md-3">
+                                    Address:
+                                </div>
+                                <div class="col-md-9">
+                                    <div class="form-group">
+                                      <input type="text" class="form-control" formControlName='address'>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-3">
+                                    Postal Number:
+                                </div>
+                                <div class="col-md-9">
+                                    <div class="form-group">
+                                      <input type="text" class="form-control" formControlName='Postal'>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="row">
+                                <div class="col-md-12">
+                                    <button type="button" class="btn btn-primary">Add</button>&nbsp;
+                                    <button type="reset" class="btn btn-danger">Reset</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </form>
+            </div>
+            <div class="col-md-8">
+
+            </div>
+        </div>
+    </div>
+</div>
