--- a/frontend-angular-app/src/app/components/profile/profile.component.html
+++ b/frontend-angular-app/src/app/components/profile/profile.component.html
@@ -1,1 +1,43 @@
-<p>profile works!</p>
+<app-mynavbar></app-mynavbar>
+<div class="card">
+    
+    <div class="card-body">
+        <h4 class="card-title">Profile</h4>
+        <div class="row">
+            <div class="col-md-2">
+                <img src="" class="img-thumbnail" src="{{profile.img}}" alt="Your Image">
+            </div>
+            <div class="col-md-10">
+                <div class="card">
+                    <div class="card-header">
+                        Profile
+                    </div>
+                    <div class="card-body">
+                        
+                        <div class="row" style="padding: 5px;">
+                            <div class="col-lg-2"><i class="fa fa-user-circle" aria-hidden="true"></i> Name:</div>
+                            <div class="col-lg-10 text-left">
+                                {{profile.name}}
+                            </div>
+                        </div>
+                    
+                        <div class="row" style="padding: 5px;">
+                            <div class="col-lg-2"><i class="fa fa-at" aria-hidden="true"></i> Email:</div>
+                            <div class="col-sm-10 text-left">
+                                {{profile.email}}
+                            </div>
+                        </div>
+                        <div class="row" style="padding: 5px;">
+                            <div class="col-lg-2"><i class="fa fa-phone" aria-hidden="true"></i> Phone:</div>
+                            <div class="col-lg-10 text-left">
+                                {{profile.phone}}
+                            </div>
+                        </div>
+                        
+                    </div>
+                </div>
+                
+            </div>
+        </div>
+    </div>
+</div>
