--- a/frontend-angular-app/src/app/components/addproducts/addproducts.component.html
+++ b/frontend-angular-app/src/app/components/addproducts/addproducts.component.html
@@ -83,24 +83,27 @@
                                 </div>
                                 <div class="col-md-9">
                                     <div class="form-group">
-                                        <input type="file" class="form-control-file" formControlName='file'>
+                                      <input type="file" class="form-control-file" formControlName='file' (change)="onChangeImg($event)">
                                     </div>
                                 </div>
                             </div>
 
+                            
+
                             <div class="row">
                                 <div class="col-md-3">
-                                    
+
                                 </div>
                                 <div class="col-md-9">
-                                    <img class="img-thumbnail" [src]="this.productForm.value.img" style="height:150px;">
+                                    <img *ngIf="previewLoaded" class="img-thumbnail" [src]="this.productForm.value.img" style="height:150px;">
                                 </div>
                             </div>
 
                             <div class="row">
                                 <div class="col-md-12">
-                                    <button type="button" class="btn btn-primary">Add</button>&nbsp;
-                                    <button type="reset" class="btn btn-danger">Reset</button>
+                                    <button type="button" class="btn btn-primary" (click)="addProduct()">Add</button>&nbsp;
+                                    <button type="reset" class="btn btn-danger">Reset</button>&nbsp;
+                                    <button type="reset" class="btn btn-primary" (click)="showproduct()">Show Product</button>
                                 </div>
                             </div>
                         </div>
