--- a/frontend-angular-app/src/app/components/products/products.component.html
+++ b/frontend-angular-app/src/app/components/products/products.component.html
@@ -19,15 +19,15 @@
                         </tr>
                     </thead>
                     <tbody>
-                        <tr>
-                            <td scope="row">item.id</td>
-                            <td>item.who</td>
-                            <td>item.type</td>
-                            <td>item.name</td>
-                            <td>item.detail</td>
-                            <td>item.quantity</td>
-                            <td>item.price</td>
-                            <td>item.img</td>
+                        <tr *ngFor="let item of products; index as i">
+                            <td scope="row">{{item.id}}</td>
+                            <td>{{item.who}}</td>
+                            <td>{{item.type}}</td>
+                            <td>{{item.name}}</td>
+                            <td>{{item.detail}}</td>
+                            <td>{{item.quantity}}</td>
+                            <td>{{item.price}}</td>
+                            <td><img [src]="item.img" style="height:150px;"></td>
                         </tr>
                     </tbody>
                 </table>
