--- a/frontend-angular-app/src/app/components/payment/payment.component.html
+++ b/frontend-angular-app/src/app/components/payment/payment.component.html
@@ -48,7 +48,7 @@
 
                             <div class="row">
                                 <div class="col-md-12" >
-                                    <button type="button" class="btn btn-primary">Submit</button>&nbsp;
+                                    <button type="button" class="btn btn-primary" (click)="addPayment()">Submit</button>&nbsp;
                                     <button type="reset" class="btn btn-danger">Reset</button>
                                 </div>
                             </div>
