--- a/frontend-angular-app/src/app/components/address/address.component.html
+++ b/frontend-angular-app/src/app/components/address/address.component.html
@@ -26,11 +26,41 @@
                             </div>
                             <div class="row">
                                 <div class="col-md-3">
+                                    Subdistrict:
+                                </div>
+                                <div class="col-md-9">
+                                    <div class="form-group">
+                                      <input type="text" class="form-control" formControlName='subdistrict'>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-3">
+                                    District:
+                                </div>
+                                <div class="col-md-9">
+                                    <div class="form-group">
+                                      <input type="text" class="form-control" formControlName='district'>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-3">
+                                    Province:
+                                </div>
+                                <div class="col-md-9">
+                                    <div class="form-group">
+                                      <input type="text" class="form-control" formControlName='province'>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-3">
                                     Postal Number:
                                 </div>
                                 <div class="col-md-9">
                                     <div class="form-group">
-                                      <input type="text" class="form-control" formControlName='Postal'>
+                                      <input type="text" class="form-control" formControlName='postal'>
                                     </div>
                                 </div>
                             </div>
