--- a/frontend-angular-app/src/app/components/profile/profile.component.html
+++ b/frontend-angular-app/src/app/components/profile/profile.component.html
@@ -15,9 +15,16 @@
                     <div class="card-body">
                         
                         <div class="row" style="padding: 5px;">
-                            <div class="col-lg-2"><i class="fa fa-user-circle" aria-hidden="true"></i> Name:</div>
+                            <div class="col-lg-2"><i class="fa fa-user-circle" aria-hidden="true"></i> Username:</div>
                             <div class="col-lg-10 text-left">
                                 {{profile.name}}
+                            </div>
+                        </div>
+
+                        <div class="row" style="padding: 5px;">
+                            <div class="col-lg-2"><i class="fas fa-venus-mars" aria-hidden="true"></i> Gender:</div>
+                            <div class="col-lg-10 text-left">
+                                {{profile.gender}}
                             </div>
                         </div>
                     
