Add Products to Cart

--- a/frontend-angular-app/src/app/components/mynavbar/mynavbar.component.html
+++ b/frontend-angular-app/src/app/components/mynavbar/mynavbar.component.html
@@ -29,7 +29,7 @@
         </ul>
         <a routerLink="/cart" class="btn btn-dark">
             <i class="fa fa-shopping-cart" aria-hidden="true"></i> Cart
-            <span class="badge badge-info"></span>
+            <span class="badge badge-info">{{getCounter()}}</span>
         </a>
     </div>
 </nav>
