--- a/frontend-angular-app/src/app/components/cart/cart.component.html
+++ b/frontend-angular-app/src/app/components/cart/cart.component.html
@@ -15,13 +15,12 @@
         </thead>
         <tbody>
             <tr *ngFor="let item of cart; index as i">
-                <td scope="row">item.type</td>
-                <td>item.id</td>
+                <td scope="row">{{item.id}}</td>
                 <td>item.who</td>
-                <th>item.type</th>
-                <td>item.name</td>
-                <td>item.detail</td>
-                <td>item.price</td>
+                <td>{{item.type}}</td>
+                <td>{{item.name}}</td>
+                <td>{{item.quantity}}</td>
+                <td>{{item.price}}</td>
             </tr>
         </tbody>
     </table>
@@ -29,6 +28,6 @@
 
 <div class="row">
     <div class="col-md-12 text-right">
-        <h4>Total : getSumPeice</h4>
+        <h4>Total : {{getsumPrice()}}</h4>
     </div>
 </div>
