--- a/frontend-angular-app/src/app/components/products/products.component.html
+++ b/frontend-angular-app/src/app/components/products/products.component.html
@@ -16,6 +16,7 @@
                             <th>Quantity</th>
                             <th>Price</th>
                             <th>Image</th>
+                            <th>Add to Cart</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -28,6 +29,11 @@
                             <td>{{item.quantity}}</td>
                             <td>{{item.price}}</td>
                             <td><img [src]="item.img" style="height:150px;"></td>
+                            <td>
+                                <a class="btn btn-outline-primary" role="button" (click)="addToCart(i)">
+                                    <i class="fa fa-cart-plus" aria-hidden="true"></i>
+                                </a>
+                            </td>
                         </tr>
                     </tbody>
                 </table>
