--- a/frontend-angular-app/src/app/components/showproducts/showproducts.component.html
+++ b/frontend-angular-app/src/app/components/showproducts/showproducts.component.html
@@ -15,6 +15,7 @@
                             <th>Quantity</th>
                             <th>Price</th>
                             <th>Image</th>
+                            <th>Manage</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -26,6 +27,7 @@
                             <td>{{item.quantity}}</td>
                             <td>{{item.price}}</td>
                             <td><img [src]="item.img" style="height:150px;"></td>
+                            <td><button type="button" class="btn btn-primary" (click) = "deleteField(i)">Delete</button></td>
                         </tr>
                     </tbody>
                 </table>
