--- a/frontend-angular-app/src/app/components/address/address.component.html
+++ b/frontend-angular-app/src/app/components/address/address.component.html
@@ -67,7 +67,7 @@
 
                             <div class="row">
                                 <div class="col-md-12">
-                                    <button type="button" class="btn btn-primary">Add</button>&nbsp;
+                                    <button type="button" class="btn btn-primary" (click)="addAddress()">Add</button>&nbsp;
                                     <button type="reset" class="btn btn-danger">Reset</button>
                                 </div>
                             </div>
