--- a/frontend-angular-app/src/app/components/addproducts/addproducts.component.html
+++ b/frontend-angular-app/src/app/components/addproducts/addproducts.component.html
@@ -103,7 +103,7 @@
                                 <div class="col-md-12">
                                     <button type="button" class="btn btn-primary" (click)="addProduct()">Add</button>&nbsp;
                                     <button type="reset" class="btn btn-danger">Reset</button>&nbsp;
-                                    <button type="reset" class="btn btn-primary" (click)="showproduct()">Show Product</button>
+                                    <button routerLink="/showproducts" routerLinkActive="active" type="reset" class="btn btn-primary" (click)="showproduct()">Show Product</button>
                                 </div>
                             </div>
                         </div>
