--- a/frontend-angular-app/src/app/components/profile/profile.component.html
+++ b/frontend-angular-app/src/app/components/profile/profile.component.html
@@ -13,9 +13,16 @@
                         Profile
                     </div>
                     <div class="card-body">
-                        
+
                         <div class="row" style="padding: 5px;">
                             <div class="col-lg-2"><i class="fa fa-user-circle" aria-hidden="true"></i> Username:</div>
+                            <div class="col-lg-10 text-left">
+                                {{profile.username}}
+                            </div>
+                        </div>
+                        
+                        <div class="row" style="padding: 5px;">
+                            <div class="col-lg-2"><i class="fa fa-user-circle" aria-hidden="true"></i> Name:</div>
                             <div class="col-lg-10 text-left">
                                 {{profile.name}}
                             </div>
