--- a/frontend-angular-app/src/app/components/address/address.component.html
+++ b/frontend-angular-app/src/app/components/address/address.component.html
@@ -67,13 +67,13 @@
 
                             <div class="row">
                                 <div class="col-md-12">
-                                    <button type="button" class="btn btn-primary" (click)="addAddress()">Add</button>&nbsp;
+                                    <button routerLink="/payments" routerLinkActive="active" type="button" class="btn btn-primary" (click)="addAddress()">Add</button>&nbsp;
                                     <button type="reset" class="btn btn-danger">Reset</button>
                                 </div>
                                 <div class="row" >
                                     <div class="col-md-12">
                                     <br>
-                                        <button  type="submit" class="btn btn-primary" routerLink="/payments" routerLinkActive="active">Next</button>
+                                        <button  type="submit" class="btn btn-primary" routerLink="/cart" routerLinkActive="active">Back</button>
                                     </div>
                                 </div>
                             </div>
