เพิ่มหัว addproducts, ลบ Add ใน show table

--- a/frontend-angular-app/src/app/components/mynavbar/mynavbar.component.html
+++ b/frontend-angular-app/src/app/components/mynavbar/mynavbar.component.html
@@ -8,6 +8,9 @@
     <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
         <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
             <li class="nav-item">
+                <a routerLink="/addproducts" routerLinkActive="active" class="btn btn-dark">Add Product</a>
+            </li>
+            <li class="nav-item">
                 <a routerLink="/showproducts" routerLinkActive="active" class="btn btn-dark">Show Product</a>
             </li>
             <li class="nav-item">
