--- a/frontend-angular-app/src/app/components/updateproducts/updateproducts.component.html
+++ b/frontend-angular-app/src/app/components/updateproducts/updateproducts.component.html
@@ -13,15 +13,15 @@
                         <div class="card-header">
                             Product Form
                         </div>
-                        <div class="card-body" *ngFor="let item of products; index as i">
+                        <div class="card-body" >
                             <div class="row">
                                 <div class="col-md-3">
                                     Product Type:
                                 </div>
                                 <div class="col-md-9">
                                     <div class="form-group">
-                                        <select class="form-control" id ="type">
-                                          <option [value]="item">{{item.type}}</option>
+                                        <select class="form-control" formControlName="type">
+                                          <option value=""></option>
                                           <option *ngFor="let item of productType" [value]="item">{{item}}</option>
                                         </select>
                                       </div>
@@ -33,7 +33,7 @@
                                 </div>
                                 <div class="col-md-9">
                                     <div class="form-group">
-                                        <input type="number" class="form-control" id = "id" value = "{{item.id}}" >
+                                      <input type="number" class="form-control" formControlName='id'>
                                     </div>
                                 </div>
                             </div>
@@ -43,7 +43,7 @@
                                 </div>
                                 <div class="col-md-9">
                                     <div class="form-group">
-                                      <input type="text" class="form-control" id = "name" value = "{{item.name}}">
+                                      <input type="text" class="form-control" formControlName='name'>
                                     </div>
                                 </div>
                             </div>
@@ -53,8 +53,7 @@
                                 </div>
                                 <div class="col-md-9">
                                     <div class="form-group">
-                                      <input type="text" class="form-control" id = "detail" 
-                                      value = "{{item.detail}}">
+                                      <input type="text" class="form-control" formControlName='detail'>
                                     </div>
                                 </div>
                             </div>
@@ -64,7 +63,7 @@
                                 </div>
                                 <div class="col-md-9">
                                     <div class="form-group">
-                                      <input type="number" class="form-control" id = "quantity" value = "{{item.quantity}}">
+                                      <input type="number" class="form-control" formControlName='quantity'>
                                     </div>
                                 </div>
                             </div>
@@ -74,7 +73,7 @@
                                 </div>
                                 <div class="col-md-9">
                                     <div class="form-group">
-                                      <input type="number" class="form-control" id = "price" value = "{{item.price}}">
+                                      <input type="number" class="form-control" formControlName='price'>
                                     </div>
                                 </div>
                             </div>
@@ -84,7 +83,7 @@
                                 </div>
                                 <div class="col-md-9">
                                     <div class="form-group">
-                                      <input type="file" class="form-control-file" id ='file' (change)="onChangeImg($event)" >
+                                      <input type="file" class="form-control-file" formControlName='file' (change)="onChangeImg($event)">
                                     </div>
                                 </div>
                             </div>
@@ -96,14 +95,14 @@
 
                                 </div>
                                 <div class="col-md-9">
-                                    <img *ngIf="previewLoaded" [src]="item.img" class="img-thumbnail" style="height:150px;">
+                                    <img *ngIf="previewLoaded" class="img-thumbnail" [src]="this.productForm.value.img" style="height:150px;">
                                 </div>
                             </div>
 
                             <div class="row">
                                 <div class="col-md-12">
-                                    <button type="button" class="btn btn-primary" (click) = "updateProduct()">Update</button>&nbsp;
-                                    <button type="reset" class="btn btn-primary" (click) = "showproduct()">Show Product</button>
+                                    <button type="button" class="btn btn-primary" (click)="updateProduct()">Update</button>&nbsp;
+                                    <button routerLink="/showproducts" routerLinkActive="active" type="reset" class="btn btn-primary" (click)="showproduct()">Show Product</button>
                                 </div>
                             </div>
                         </div>
