--- a/frontend-angular-app/src/app/components/address/address.component.html
+++ b/frontend-angular-app/src/app/components/address/address.component.html
@@ -64,18 +64,14 @@
                                     </div>
                                 </div>
                             </div>
-
+                            <br>
                             <div class="row">
-                                <div class="col-md-12">
+                                <div class="col-md-3"></div>
+                                <div class="col-md-9" >
                                     <button routerLink="/payments" routerLinkActive="active" type="button" class="btn btn-primary" (click)="addAddress()">Add</button>&nbsp;
                                     <button type="reset" class="btn btn-danger">Reset</button>
                                 </div>
-                                <div class="row" >
-                                    <div class="col-md-12">
-                                    <br>
-                                        <button  type="submit" class="btn btn-primary" routerLink="/cart" routerLinkActive="active">Back</button>
-                                    </div>
-                                </div>
+                                
                             </div>
                         </div>
                     </div>
