--- a/frontend-angular-app/src/app/components/cart/cart.component.html
+++ b/frontend-angular-app/src/app/components/cart/cart.component.html
@@ -1,6 +1,6 @@
 <app-mynavbar></app-mynavbar>
 
-<h2>4rd: Cart</h2>
+<h2> Cart</h2>
 <div class="table-responsive-md">
     <table class="table table-striped table-inverse">
         <thead class="thead-inverse">
@@ -9,7 +9,6 @@
                 <th>Type</th>
                 <th>Name</th>
                 <th>Price</th>
-                <th>Delete</th>
             </tr>
         </thead>
         <tbody>
@@ -18,7 +17,6 @@
                 <td>{{item.type}}</td>
                 <td>{{item.name}}</td>
                 <td>{{item.price}}</td>
-                <td><button type="delete" class="btn btn-primary" (click) = "deleteCart(i,item.price)">Delete</button></td>
 
             </tr>
         </tbody>
@@ -26,15 +24,18 @@
 </div>
 
 <div class="row">
-    <div class="col-md-12 text-right">
+    <div class="col-md-9"></div>
+    <div class="col-md-3 text-right">
         <h4>Total : {{getsumPrice()}}</h4>
     </div>
 </div>
-
+<br>
 <div class="row" >
-    <div class="col-md-12">
-        <button  type="submit" class="btn btn-primary" routerLink="/address" routerLinkActive="active">Submit</button>
-        <button  type="reset" class="btn btn-primary" routerLink="/products" routerLinkActive="active">back</button>
-    </div>
+    <div class="col-md-5"></div>
+        <div class="col-md-6" >
+            <button  type="submit" class="btn btn-primary" routerLink="/address" routerLinkActive="active">Submit</button>&nbsp;&nbsp;
+        
+            <button  type="reset" class="btn btn-primary" routerLink="/products" routerLinkActive="active">back</button>
+        </div>
 
 </div>
