--- a/frontend-angular-app/src/app/components/payment/payment.component.html
+++ b/frontend-angular-app/src/app/components/payment/payment.component.html
@@ -45,19 +45,15 @@
                                     </div>
                                 </div>
                             </div>
-
+                            <br>
                             <div class="row">
-                                <div class="col-md-12" >
+                                <div class="col-md-3"></div>
+                                <div class="col-md-9" >
                                     <button routerLink="/products" routerLinkActive="active" type="button" class="btn btn-primary" (click)="addPayment()">Submit</button>&nbsp;
                                     <button type="reset" class="btn btn-danger">Reset</button>
                                 </div>
                             </div>
-                            <div class="row" >
-                                <div class="col-md-12">
-                                <br>
-                                    <button  type="submit" class="btn btn-primary" routerLink="/address" routerLinkActive="active">Back</button>
-                                </div>
-                            </div>
+                            
                         </div>
                     </div>
                 </form>
