Add a faw validated

--- a/frontend-angular-app/src/app/components/payment/payment.component.html
+++ b/frontend-angular-app/src/app/components/payment/payment.component.html
@@ -53,13 +53,18 @@
                                     <button type="reset" class="btn btn-danger">Reset</button>
                                 </div>
                             </div>
-                            
+
+                            <div class="row" >
+                                <div class="col-md-12">
+                                <br>
+                                    <button  type="submit" class="btn btn-primary">Back</button>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </form>
             </div>
             <div class="col-md-8">
-
             </div>
         </div>
     </div>
