--- a/frontend-angular-app/src/app/components/mynavbar/mynavbar.component.html
+++ b/frontend-angular-app/src/app/components/mynavbar/mynavbar.component.html
@@ -4,25 +4,25 @@
         <span class="navbar-toggler-icon"></span>
     </button>
 
-    <a routerLink="/products" class="navbar-brand btn btn-dark">Home</a>
+    <a routerLink="/products" class="navbar-brand btn btn-dark">หน้าหลัก</a>
     <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
         <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
             <li class="nav-item">
-                <a routerLink="/addproducts" routerLinkActive="active" class="btn btn-dark">Add Product</a>
+                <a routerLink="/addproducts" routerLinkActive="active" class="btn btn-dark">เพิ่มสินค้า</a>
             </li>
             <li class="nav-item">
-                <a routerLink="/showproducts" routerLinkActive="active" class="btn btn-dark">Show Product</a>
+                <a routerLink="/showproducts" routerLinkActive="active" class="btn btn-dark">รายการสินค้า</a>
             </li>
             <li class="nav-item">
-                <a routerLink="/statusproducts" routerLinkActive="active" class="btn btn-dark">Status</a>
+                <a routerLink="/statusproducts" routerLinkActive="active" class="btn btn-dark">สถานะของสินค้า</a>
             </li>
             <li class="nav-item">
-                <a routerLink="/profile" routerLinkActive="active" class="btn btn-dark">Profile</a>
+                <a routerLink="/profile" routerLinkActive="active" class="btn btn-dark">โปรไฟล์ผู้ใช้</a>
             </li>
             
         </ul>
         <a routerLink="/cart" class="btn btn-dark">
-            <i class="fa fa-shopping-cart" aria-hidden="true"></i> Cart
+            <i class="fa fa-shopping-cart" aria-hidden="true"></i>รถเข็นของฉัน
             <span class="badge badge-info">{{getCounter()}}</span>
         </a>
     </div>
