--- a/frontend-angular-app/src/app/components/products/products.component.html
+++ b/frontend-angular-app/src/app/components/products/products.component.html
@@ -3,19 +3,19 @@
 <div class="container-fluid" style="margin-top:30px">           
     <div class="row">
         <div class="col-md-12">
-            <h2>Products</h2>
+            <h2>รายการสินค้า</h2>
             <div class="table-responsive-md">
                 <table class="table table-striped table-inverse">
                     <thead class="thead-inverse">
                         <tr>
-                            <th>ID.</th>
-                            <th>Type</th>
-                            <th>Name</th>
-                            <th>Detail</th>
-                            <th>Quantity</th>
-                            <th>Price</th>
-                            <th>Image</th>
-                            <th>Add to Cart</th>
+                            <th>รหัสสินค้า</th>
+                            <th>ชนิดของสินค้า</th>
+                            <th>ชื่อสินค้า</th>
+                            <th>รายละเอียดสินค้า</th>
+                            <th>จำนวน</th>
+                            <th>ราคา</th>
+                            <th>รูปภาพสินค้า</th>
+                            <th>เพิ่มไปที่รถเข็น</th>
                         </tr>
                     </thead>
                     <tbody>
