--- a/frontend-angular-app/src/app/components/signin/signin.component.html
+++ b/frontend-angular-app/src/app/components/signin/signin.component.html
@@ -6,26 +6,26 @@
          <div class="col-md-6">
               <div class="card">
                  <div class="card-header">
-                     Sign In
+                     เข้าสู่ระบบ
                  </div>
                  <form [formGroup] ="authForm">
                      <div class="card-body">
                          <div class="row">
                              <div class="col-md-12">
                                  <div class="form-group">
-                                   <label for="">Username</label>
+                                   <label for="">ชื่อผู้ใช้</label>
                                    <input type="text" class="form-control" formControlName="username">
                                  </div>
                                  <div class="form-group">
-                                     <label for="">Password</label>
+                                     <label for="">รหัสผ่าน</label>
                                      <input type="password" class="form-control" formControlName="password">
                                    </div>
                              </div>
                          </div><br />
                          <div class="row">
                              <div class="col-md-12">
-                                 <button type="button" class="btn btn-primary" (click)="signin()">Sign in</button>&nbsp;
-                                 <button type="button" class="btn btn-info" (click)="signup()">Sign up</button>
+                                 <button type="button" class="btn btn-primary" (click)="signin()">เข้าสู่ระบบ</button>&nbsp;
+                                 <button type="button" class="btn btn-info" (click)="signup()">สมัครสมาชิก</button>
                              </div>
                          </div>
                      </div>
