--- a/frontend-angular-app/src/app/components/cart/cart.component.html
+++ b/frontend-angular-app/src/app/components/cart/cart.component.html
@@ -1,14 +1,14 @@
 <app-mynavbar></app-mynavbar>
-
-<h2> Cart</h2>
+<br>
+<h2>รถเข็นของคุณ</h2>
 <div class="table-responsive-md">
     <table class="table table-striped table-inverse">
         <thead class="thead-inverse">
             <tr>
-                <th>ID.</th>
-                <th>Type</th>
-                <th>Name</th>
-                <th>Price</th>
+                <th>รหัสสินค้า</th>
+                <th>ชนิดของสินค้า</th>
+                <th>ชื่อสินค้า</th>
+                <th>ราคา</th>
             </tr>
         </thead>
         <tbody>
@@ -26,16 +26,16 @@
 <div class="row">
     <div class="col-md-9"></div>
     <div class="col-md-3 text-right">
-        <h4>Total : {{getsumPrice()}}</h4>
+        <h4>รวม  : {{getsumPrice()}} บาท</h4>
     </div>
 </div>
 <br>
 <div class="row" >
     <div class="col-md-5"></div>
         <div class="col-md-6" >
-            <button  type="submit" class="btn btn-primary" routerLink="/address" routerLinkActive="active">Submit</button>&nbsp;&nbsp;
+            <button  type="submit" class="btn btn-primary" routerLink="/address" routerLinkActive="active">ตกลง</button>&nbsp;&nbsp;
         
-            <button  type="reset" class="btn btn-primary" routerLink="/products" routerLinkActive="active">back</button>
+            <button  type="reset" class="btn btn-primary" routerLink="/products" routerLinkActive="active">ย้อนกลับ</button>
         </div>
 
 </div>
