--- a/frontend-angular-app/src/app/components/profile/profile.component.html
+++ b/frontend-angular-app/src/app/components/profile/profile.component.html
@@ -2,7 +2,7 @@
 <div class="card">
     
     <div class="card-body">
-        <h4 class="card-title">Profile</h4>
+        <h4 class="card-title"></h4><br>
         <div class="row">
             <div class="col-md-2">
                 <img src="" class="img-thumbnail" src="{{profile.img}}" alt="Your Image">
@@ -10,39 +10,39 @@
             <div class="col-md-10">
                 <div class="card">
                     <div class="card-header">
-                        Profile
+                        โปรไฟล์ผู้ใช้
                     </div>
                     <div class="card-body">
 
                         <div class="row" style="padding: 5px;">
-                            <div class="col-lg-2"><i class="fa fa-user-circle" aria-hidden="true"></i> Username:</div>
+                            <div class="col-lg-2"><i class="fa fa-user-circle" aria-hidden="true"></i> ชื่อผู้ใช้:</div>
                             <div class="col-lg-10 text-left">
                                 {{profile.username}}
                             </div>
                         </div>
                         
                         <div class="row" style="padding: 5px;">
-                            <div class="col-lg-2"><i class="fa fa-user-circle" aria-hidden="true"></i> Name:</div>
+                            <div class="col-lg-2"><i class="fa fa-user-circle" aria-hidden="true"></i> ชื่อ-สกุล :</div>
                             <div class="col-lg-10 text-left">
                                 {{profile.name}}
                             </div>
                         </div>
 
                         <div class="row" style="padding: 5px;">
-                            <div class="col-lg-2"><i class="fas fa-venus-mars" aria-hidden="true"></i> Gender:</div>
+                            <div class="col-lg-2"><i class="fas fa-venus-mars" aria-hidden="true"></i> เพศ :</div>
                             <div class="col-lg-10 text-left">
                                 {{profile.gender}}
                             </div>
                         </div>
                     
                         <div class="row" style="padding: 5px;">
-                            <div class="col-lg-2"><i class="fa fa-at" aria-hidden="true"></i> Email:</div>
+                            <div class="col-lg-2"><i class="fa fa-at" aria-hidden="true"></i> E-mail :</div>
                             <div class="col-sm-10 text-left">
                                 {{profile.email}}
                             </div>
                         </div>
                         <div class="row" style="padding: 5px;">
-                            <div class="col-lg-2"><i class="fa fa-phone" aria-hidden="true"></i> Phone:</div>
+                            <div class="col-lg-2"><i class="fa fa-phone" aria-hidden="true"></i> โทรศัพท์. :</div>
                             <div class="col-lg-10 text-left">
                                 {{profile.phone}}
                             </div>
