--- a/frontend-angular-app/src/app/components/signup/signup.component.html
+++ b/frontend-angular-app/src/app/components/signup/signup.component.html
@@ -1,7 +1,7 @@
 <div class="container" style="margin-top:50px;">
     <div class="card">
         <div class="card-header">
-            Signup
+            สมัครสมาชิก
         </div>
         <div class="card-body" style="margin-left:10px;">
             <div class="row">
@@ -10,52 +10,52 @@
                     <form [formGroup]="profileForm">
 
                         <div class="form-group">
-                            <label>Username</label>
+                            <label>ชื่อผู้ใช้</label>
                             <input type="stdid" class="form-control" formControlName='username'>
                         </div><br />
 
                         <div class="form-group">
-                            <label>Password</label>
+                            <label>รหัสผ่าน</label>
                             <input type="stdid" class="form-control" formControlName='password'>
                         </div><br />
 
                         <div class="form-group">
-                            <label>Name</label>
+                            <label>ชื่อ-สกุล</label>
                             <input type="text" class="form-control" formControlName='name'>
                         </div><br />
 
                         <div class="form-group">
-                            <label>Gender</label><br />
+                            <label>เพศ</label><br />
                             <div class="form-check form-check-inline">
                                 <label class="form-check-label">
                                     <input class="form-check-input" type="radio" name="gender" value="Male"
-                                        formControlName='gender'>Male
+                                        formControlName='gender'>ชาย
                                 </label>
                             </div>
 
                             <div class="form-check form-check-inline">
                                 <label class="form-check-label">
                                     <input class="form-check-input" type="radio" name="sex" value="Female"
-                                        formControlName='gender'>Female
+                                        formControlName='gender'>หญิง
                                 </label>
                             </div>
                         </div><br />
 
 
                         <div class="form-group">
-                            <label>Email</label>
+                            <label>E-mail</label>
                             <input type="email" class="form-control" formControlName='email'>
                         </div><br />
 
                         <div class="form-group">
-                            <label>Telephone Number</label>
+                            <label>โทรศัพท์.</label>
                             <input type="text" class="form-control" formControlName='Tel'>
                         </div><br />
 
                         <br /><br />
-                        <button type="submit" class="btn btn-primary" (click)= " signup()" >Submit</button>&nbsp;
-                        <button type="reset" class="btn btn-danger">Reset</button>&nbsp;
-                        <button type="button" class="btn btn-primary" (click) = "signin()" >Signin</button>
+                        <button type="submit" class="btn btn-primary" (click)= " signup()" >ยืนยัน</button>&nbsp;
+                        <button type="reset" class="btn btn-danger">ล้าง</button>&nbsp;
+                        <button type="button" class="btn btn-primary" (click) = "signin()" >เข้าสู่ระบบ</button>
                     </form>
                 </div>
             </div>
