--- a/frontend-angular-app/src/app/components/statusproducts/statusproducts.component.html
+++ b/frontend-angular-app/src/app/components/statusproducts/statusproducts.component.html
@@ -3,16 +3,16 @@
 <div class="container-fluid" style="margin-top:30px">           
     <div class="row">
         <div class="col-md-12">
-            <h2>Products Status</h2>
+            <h2>สถานะของสินค้า</h2>
             <div class="table-responsive-md">
                 <table class="table table-striped table-inverse">
                     <thead class="thead-inverse">
                         <tr>
-                            <th>ID.</th>
-                            <th>Type</th>
-                            <th>Name</th>
-                            <th>Image</th>
-                            <th>Status</th>
+                            <th>รหัสสินค้า</th>
+                            <th>ชนิดของสินค้า</th>
+                            <th>ชื่อสินค้า</th>
+                            <th>รูปภาพสินค้า</th>
+                            <th>สถานะ</th>
                         </tr>
                     </thead>
                     <tbody>
